2007-04-27 HLT base
	- memory leaks corrected
	- AliLog support moved to libAliHLTUtil in order to keep
	- libHLTbase free of AliRoot dependencies
	- dynamic loeding of AliLog support
	- AliHLTFileWriter moved to libAliHLTUtil
2007-04-17 HLT sample applications
	- publisher for AliLoader trees added
	- sample analysis chain added tp sample lib
	- tutorial and documentation
	- benchmark functionality added to AliHLTSystem
2007-03-14 aliroot integration
	- AliHLTSystem interface methods to AliHLTReconstructor implemeted
	- AliHLTModuleAgent introduced for each HLT module, sample
	  agent added to libAliHLTSample
	- AliHLTOfflineInterface base classes added
	- AliHLTFilePublisher, AliHLTRootFileWriter/Publisher moved to 
	  libAliHLTUtil (AliHLTFileWriter will follow when dep. to PHOS are
	  cleared)
2007-03-09 logging system
	- adapted to AliRoot logging system, messages printed out via AliRoot
	  message channel
	- AliRoot logging methods can be used in the same way as in AliRoot
	- HLT TPC logging methods fixed to be redirected to the common logging
	  channel
	- handling of configurations corrected in order to cope with the
	  Root CINT garbage collection.
	- TPCLib stand-alone build system changed in order to use AliRoot package
	  definition
2007-03-01 changes by Gaute (TPC)
	- added InterMerger to SliceTrackerComponent, can be switched off by
	  component argument 'disable-merger'
	- new data type 'TRACKS' defined for TPC describing tracks in global
	  coordinates
	- GlobalMergerComponent has TRACKS/TPC as output data type
	- new component argument to ClusterFinderComponent: timebins <n> specifies
	  the number of timebins to overcome the discrepancy between simulated
	  and real data
	- TPCEsdWriter adapted to new TRACKS/TPC data type
2007-02-21
	- high-level component interface added
	- libHLTbase version 2:0:0
	
2007-02-20 version HLT-v0-5 tagged
	
2007-02-20
	- Cellular Automaton tracker added to TPC Lib